data/derived/fa15/progs/unify/prog0317.ml.out
Characters 464-474:
  removeZero (add (padZero l1,l2));;
                   ^^^^^^^^^^
Error: This expression has type int list -> int list * int list
       but an expression was expected of type int list
